# hackathon-1

./: .coverage  .gitignore  CHAT_WIDGET_SETUP.md  DEPLOYMENT_CHECKLIST.md  FEATURE_005_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE-2-PLANNING-COMPLETE.txt  MODULE-3-SPECIFICATION-COMPLETE.md  PHASE-1-COMPLETION-REPORT.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.txt  QUICK_START.md  README.md  chat.py  docusaurus.config.js  package.json  sidebars.js  tmpclaude-ce5f-cwd  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  chat.py  main.py  pyproject.toml  railway.toml  render.yaml  start.sh
backend/api/: __init__.py  models.py  server.py
backend/ingestion/: __init__.py  models.py
backend/ingestion/chunking/: text_chunker.py
backend/ingestion/crawlers/: __init__.py  docusaurus_crawler.py
backend/ingestion/embeddings/: __init__.py  cohere_embedder.py
backend/ingestion/processors/: __init__.py  text_cleaner.py
backend/ingestion/storage/: __init__.py  qdrant_store.py
backend/rag/: __init__.py  models.py  prompt_builder.py  query_engine.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_rag_chatbot.py
backend/tests/unit/: __init__.py  test_cohere_embedder.py  test_config.py  test_docusaurus_crawler.py  test_errors.py  test_qdrant_store.py  test_rag_models.py  test_rag_prompt_builder.py  test_rag_query_engine.py  test_text_chunker.py  test_text_cleaner.py
backend/utils/: __init__.py  config.py  errors.py  logging.py
docs/: glossary.md  index.md  known-issues.md  quickstart.md  references.md  setup-guide.md
docs/examples/: EXAMPLE_TEMPLATE.md  VERIFICATION_CHECKLIST.md
docs/examples/ch1-dds-pubsub/: README.md  humanoid-imu-example.py  minimal-publisher.py  minimal-subscriber.py  node-lifecycle.py  qos-settings.py
docs/examples/ch2-communication-patterns/: topic-publisher.py  topic-subscriber.py
docs/module-4-vla/: 01-intro.md  02-chapter-voice-recognition.md
docs/part1-foundations/: 01-ros2-overview.md  02-dds-concepts.md  03-why-humanoids.md
docs/part2-communication/: 04-nodes-and-lifecycle.md  05-topics-pubsub.md  06-services-reqrep.md  07-actions-async.md  08-agent-controller-example.md
docs/part3-robot-structure/: 09-urdf-fundamentals.md  10-humanoid-urdf-example.md  11-rviz-gazebo-integration.md
docs/part4-gazebo-simulation/: 12-gazebo-fundamentals.md  13-physics-simulation.md  14-humanoid-gazebo-world.md  15-gazebo-sensors.md  16-sensor-streaming-ros2.md  17-gazebo-advanced-physics.md
history/prompts/001-docs-rag-ingest/: 1-create-rag-ingest-spec.spec.prompt.md  2-design-implementation-plan.plan.prompt.md  3-generate-implementation-tasks.tasks.prompt.md  4-implement-phase1-2.red.prompt.md  5-implement-complete-rag-pipeline.green.prompt.md  6-implement-rag-chatbot.green.prompt.md  (+1 more)
specs/001-docs-rag-ingest/: plan.md  spec.md  tasks.md
specs/001-ros2-humanoid-book/: MODULE-2-IMPLEMENTATION-GUIDE.md  MODULE-2-SUMMARY.md  module-2-plan.md  module-2-structure.md  module-2-tasks.md  plan.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: spec.md
specs/003-isaac-sim/: plan.md  research.md  spec.md  tasks.md
specs/004-vla-integration/: data-model.md  plan.md  quickstart.md  requirements-checklist.md  research.md  spec.md  tasks.md
specs/005-docusaurus-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
src/swizzled/: Root.tsx
static/: index.html
tests/accessibility/: sidebar-keyboard-nav.test.ts
tests/integration/: sidebar-navigation.test.ts
tests/responsive/: sidebar-responsive.test.ts
(+41 files in other folders)
