[project]
name = "docs-rag-ingest"
version = "0.1.0"
description = "RAG documentation ingestion pipeline: crawl Docusaurus sites, chunk content, generate embeddings, store in Qdrant"
requires-python = ">=3.11"
authors = [
    { name = "Anthropic", email = "support@anthropic.com" }
]
license = { text = "MIT" }

dependencies = [
    "requests>=2.31.0",           # HTTP client for crawling
    "beautifulsoup4>=4.12.0",     # HTML parsing
    "pydantic>=2.4.0",            # Configuration validation
    "pydantic-settings>=2.0.0",   # Environment variable support for pydantic v2
    "cohere>=5.0.0",              # Cohere SDK for embeddings
    "qdrant-client>=1.16.0,<2.0",       # Qdrant Python client (Python 3.14 compatible)
    "tiktoken>=0.5.0",            # Token counting
    "python-dotenv>=1.0.0",       # .env file loading
    "structlog>=24.0.0",          # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion", "utils", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
